--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bundle/Vundle.vim"]
 	path = bundle/Vundle.vim
-	url = git@github.com:hdl/.vim.git
+	url = git@github.com:gmarik/Vundle.vim.git
